# SPIRV_INFERENCE

./: IEEE754.md  MANIFEST.sha256  PARITY.md  README.md  RELEASE_REPORT.md
source/tflite_loader/: Cargo.toml  GENERALITY_REPORT.md  TFLITE_REPORT.md
source/tflite_loader/fixtures/: export_squeezenet_onnx.py  make_synthetic_logistic_tanh_tflite.py  make_synthetic_logistic_tflite.py
source/tflite_loader/src/: engine.rs  graph.rs  kernels.rs  lib.rs  main.rs  model.rs  op_decoder.rs  report.rs  scheduler.rs  tensor.rs  vulkan.rs
source/training/: CNN_TRAINING_RESULT.json  Cargo.toml  PYTORCH_RESULT.json  TRAINING_REPORT.md  TRAINING_RESULT.json  pytorch_reference.py
source/training/shaders/: adam_step.comp  batched_softmax10.comp  bias_add.comp  bn_dgamma_dbeta.comp  bn_dx_part1.comp  bn_dx_part2.comp  bn_dx_part3.comp  bn_forward.comp  bn_mean.comp  bn_pack_params.comp  bn_var.comp  bn_xhat.comp  conv2d_backward_data.comp  conv2d_backward_weight.comp  conv2d_forward.comp  conv_bias_add.comp  cross_entropy_loss.comp  element_add.comp  global_avg_pool.comp  global_avg_pool_backward.comp  matmul.comp  matmul_nt.comp  matmul_tn.comp  maxpool2d_backward.comp  maxpool2d_forward_mask.comp  reduce_sum_nhw.comp  reduce_sum_rows.comp  relu_backward.comp  relu_forward.comp  softmax_ce_backward.comp  zero_fill.comp
source/training/shaders/spv/: adam_step.spv  batched_softmax10.spv  bias_add.spv  bn_dgamma_dbeta.spv  bn_dx_part1.spv  bn_var.spv  (+25 more)
source/training/src/: cifar10.rs  cnn_kernels.rs  cnn_main.rs  kernels.rs  main.rs  mnist.rs  report.rs  resnet_main.rs  vulkan_ctx.rs
(+198 files in other folders)
