[package]
name = "tflite_loader"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
ash = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
bytemuck = { version = "1", features = ["derive"] }
flatbuffers = "24"

[dev-dependencies]
tempfile = "3"
